--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,535 @@
-/* No CSS */
+@font-face {
+  font-family: "CenturyGothic";
+  font-display: swap;
+  src: url("../fonts/CenturyGothic.woff") format("woff"), url("../fonts/CenturyGothic.woff2") format("woff2");
+  font-weight: regular;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "CenturyGothic";
+  font-display: swap;
+  src: url("../fonts/CenturyGothic-Bold.woff") format("woff"), url("../fonts/CenturyGothic-Bold.woff2") format("woff2");
+  font-weight: bold;
+  font-style: normal;
+}
+
+html {
+  font-family: sans-serif;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+
+body {
+  margin: 0;
+}
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+menu,
+nav,
+section,
+summary {
+  display: block;
+}
+
+audio,
+canvas,
+progress,
+video {
+  display: inline-block;
+  vertical-align: baseline;
+}
+
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
+
+[hidden],
+template {
+  display: none;
+}
+
+a {
+  background-color: transparent;
+}
+
+a:active,
+a:hover {
+  outline: 0;
+}
+
+abbr[title] {
+  border-bottom: 1px dotted;
+}
+
+b,
+strong {
+  font-weight: bold;
+}
+
+dfn {
+  font-style: italic;
+}
+
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+mark {
+  background: #ff0;
+  color: #000;
+}
+
+small {
+  font-size: 80%;
+}
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sup {
+  top: -0.5em;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+img {
+  border: 0;
+}
+
+svg:not(:root) {
+  overflow: hidden;
+}
+
+figure {
+  margin: 1em 40px;
+}
+
+hr {
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  height: 0;
+}
+
+pre {
+  overflow: auto;
+}
+
+code,
+kbd,
+pre,
+samp {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  color: inherit;
+  font: inherit;
+  margin: 0;
+}
+
+button {
+  overflow: visible;
+}
+
+button,
+select {
+  text-transform: none;
+}
+
+button,
+html input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  -webkit-appearance: button;
+  cursor: pointer;
+}
+
+button[disabled],
+html input[disabled] {
+  cursor: default;
+}
+
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+
+input {
+  line-height: normal;
+}
+
+input[type="checkbox"],
+input[type="radio"] {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+input[type="search"] {
+  -webkit-appearance: textfield;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box;
+}
+
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+fieldset {
+  border: 1px solid #c0c0c0;
+  margin: 0 2px;
+  padding: 0.35em 0.625em 0.75em;
+}
+
+legend {
+  border: 0;
+  padding: 0;
+}
+
+textarea {
+  overflow: auto;
+}
+
+optgroup {
+  font-weight: bold;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+td,
+th {
+  padding: 0;
+}
+
+.b-page {
+  margin: 0;
+  padding: 0;
+}
+
+/* Fonts */
+/* Colors */
+/* Shadows */
+.b-page {
+  background-color: #F3F3F3;
+}
+
+.header {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.header__layout {
+  width: 90%;
+  margin: 10px auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header__inner-logo {
+  display: block;
+}
+
+.header__logo-img {
+  width: calc(120px + (180 - 120) * ((100vw - 320px) / (1600 - 320)));
+  height: 50px;
+}
+
+.header__menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.header__menu-inner-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.header__links {
+  text-decoration: none;
+  color: black;
+  font-size: 18px;
+  font-family: "CenturyGothic";
+  font-weight: regular;
+  margin: auto 15px;
+  border-bottom: 1px solid transparent;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.header__links--hover:hover {
+  border-bottom: 1px solid #ffa500;
+}
+
+.header__button {
+  margin: auto 0 auto 15px;
+  text-align: center;
+  padding: 10px 10px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: inline-block;
+  text-decoration: none;
+  color: black;
+  border: 1px solid #ffa500;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.header__menu-burger-link {
+  text-decoration: none;
+  color: transparent;
+  width: 50px;
+  height: 50px;
+  position: relative;
+  display: none;
+  margin-left: 20px;
+}
+
+.header__menu-burger-arrow {
+  position: absolute;
+  top: calc(50% - 1px);
+  background-color: black;
+  width: 100%;
+  height: 2px;
+}
+
+.header__menu-burger-link::before, .header__menu-burger-link::after {
+  content: "";
+  position: absolute;
+  width: 50px;
+  height: 2px;
+  background-color: black;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
+.header__menu-burger-link::before {
+  top: 0;
+}
+
+.header__menu-burger-link::after {
+  bottom: 0;
+}
+
+.header__menu-burger-link:hover .header__menu-burger-link::before {
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+.header__menu-burger-link:hover .header__menu-burger-link::after {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.header__menu-burger-link:hover .header__menu-burger-arrow {
+  height: 0;
+}
+
+.header__button--hover:hover {
+  background-color: #ffa500;
+  color: white;
+}
+
+.header__button-label {
+  font-family: "CenturyGothic";
+  font-weight: regular;
+  font-size: 18px;
+}
+
+.header__button-icon {
+  display: none;
+}
+
+.first-screen {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.first-screen__bg-smear {
+  position: absolute;
+  left: 10%;
+  top: -5%;
+  z-index: 2;
+}
+
+.grid-carts {
+  margin: auto;
+  width: 90%;
+  z-index: 3;
+  display: -ms-grid;
+  display: grid;
+  gap: 10px;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  -ms-grid-rows: (350px)[3];
+      grid-template-rows: repeat(3, 350px);
+}
+
+.grid-carts__cart--hover:hover .cart-inner-descr {
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+  bottom: 0;
+}
+
+.grid-carts__cart {
+  position: relative;
+  overflow: hidden;
+  -webkit-box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.25);
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+}
+
+.grid-carts__wrap-image {
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+}
+
+.grid-carts__image {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.grid-carts__cart1 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+}
+
+.grid-carts__cart1-main-title {
+  color: #654321;
+  font-size: 36px;
+  margin: 10px 0 20px 0;
+}
+
+.grid-carts__cart1-inner-subtitle {
+  border: 2px solid  #ffa500;
+  width: 50%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 10px;
+}
+
+.grid-carts__cart1-subtitle {
+  margin: 0;
+}
+
+.grid-carts__cart1-desc-list {
+  list-style: none;
+}
+
+.grid-carts .cart-inner-descr {
+  position: absolute;
+  bottom: -65px;
+  padding: 0 10px 20px 20px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+}
+
+.grid-carts .cart-inner-descr__descr {
+  font-family: "CenturyGothic";
+  font-size: 20px;
+  color: white;
+  width: 100%;
+}
+
+.grid-carts .cart-inner-descr__link-test {
+  display: inline-block;
+  padding: 10px 25px;
+  font-family: "CenturyGothic";
+  border: 1px solid #ffa500;
+  text-decoration: none;
+  color: white;
+}
+
+@media (max-width: 767px) {
+  .grid-carts .header__menu-inner-links {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    z-index: 1;
+    position: absolute;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100px;
+    background-color: blue;
+  }
+  .grid-carts .header__links {
+    font-size: calc(16px + (18 - 16) * ((100vw - 320px) / (767 - 320)));
+  }
+  .grid-carts .header__button-icon {
+    display: block;
+  }
+  .grid-carts .header__button-label {
+    display: none;
+    font-size: calc(16px + (18 - 16) * ((100vw - 320px) / (767 - 320)));
+  }
+  .grid-carts .header__menu-burger-link {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    z-index: 2;
+    display: block;
+  }
+}
