--- a/css/main.css
+++ b/css/main.css
@@ -244,6 +244,7 @@ th {
 /* Shadows */
 .b-page {
   background-color: #F3F3F3;
+  overflow-y: scroll;
 }
 
 .header {
@@ -391,8 +392,9 @@ th {
 
 .first-screen__bg-smear {
   position: absolute;
-  left: 10%;
-  top: -5%;
+  width: 50vw;
+  left: 1%;
+  top: 5vw;
   z-index: 2;
 }
 
@@ -440,6 +442,7 @@ th {
 }
 
 .grid-carts__cart1 {
+  height: auto;
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-column: 1/3;
@@ -452,7 +455,7 @@ th {
 }
 
 .grid-carts__cart1-inner-subtitle {
-  border: 2px solid  #ffa500;
+  border: 2px solid #ffa500;
   width: 50%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -498,7 +501,7 @@ th {
 }
 
 @media (max-width: 767px) {
-  .grid-carts .header__menu-inner-links {
+  .header__menu-inner-links {
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
             order: 1;
@@ -515,21 +518,27 @@ th {
     height: 100px;
     background-color: blue;
   }
-  .grid-carts .header__links {
+  .header__links {
     font-size: calc(16px + (18 - 16) * ((100vw - 320px) / (767 - 320)));
   }
-  .grid-carts .header__button-icon {
+  .header__button-icon {
     display: block;
   }
-  .grid-carts .header__button-label {
+  .header__button-label {
     display: none;
     font-size: calc(16px + (18 - 16) * ((100vw - 320px) / (767 - 320)));
   }
-  .grid-carts .header__menu-burger-link {
+  .header__menu-burger-link {
     -webkit-box-ordinal-group: 3;
         -ms-flex-order: 2;
             order: 2;
     z-index: 2;
     display: block;
+  }
+  .grid-carts {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: (350px)[11];
+        grid-template-rows: repeat(11, 350px);
   }
 }
