--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,3 @@
-@font-face {
-  font-family: "CenturyGothic";
-  font-display: swap;
-  src: url("../fonts/CenturyGothic.woff") format("woff"), url("../fonts/CenturyGothic.woff2") format("woff2");
-  font-weight: regular;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "CenturyGothic";
-  font-display: swap;
-  src: url("../fonts/CenturyGothic-Bold.woff") format("woff"), url("../fonts/CenturyGothic-Bold.woff2") format("woff2");
-  font-weight: bold;
-  font-style: normal;
-}
-
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -234,19 +218,119 @@ th {
   padding: 0;
 }
 
-.b-page {
-  margin: 0;
-  padding: 0;
+@font-face {
+  font-family: "CenturyGothic";
+  font-display: swap;
+  src: url("../fonts/CenturyGothic.woff") format("woff"), url("../fonts/CenturyGothic.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "CenturyGothic";
+  font-display: swap;
+  src: url("../fonts/CenturyGothic-Bold.woff") format("woff"), url("../fonts/CenturyGothic-Bold.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
 }
 
 /* Fonts */
-/* Colors */
 /* Shadows */
-.b-page {
-  background-color: #F3F3F3;
-  overflow-y: scroll;
-}
-
+/*  @media (max-width: $desctop) {
+    .grid-carts {
+      grid-template-columns: 1fr;
+      grid-template-rows: repeat(11, 350px);
+    }
+  }
+@media (max-width: $laptop) {
+    .grid-carts {
+      grid-template-columns: 1fr;
+      grid-template-rows: repeat(11, 350px);
+    }
+  } 
+@media (max-width: $tablet) {
+    .header__menu-inner-links {
+      order: 1;
+      z-index: 1;
+      position: absolute;
+      display: flex;
+      flex-wrap: wrap;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100px;
+      background-color: red;
+    }
+    .header__links {
+      font-size: calc(16px + (18 - 16) * ((100vw - 320px) / (767 - 320)));
+    }
+    .header__button-icon {
+      display: block;
+    }
+    .header__button-label {
+      display: none;
+      font-size: calc(16px + (18 - 16) * ((100vw - 320px) / (767 - 320)));
+    }
+    .header__menu-burger-link {
+      order: 2;
+      z-index: 2;
+      display: block;
+    }
+    .grid-carts {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(6, minmax(200px, 400px))
+    }
+    .grid-carts__cart1 {
+        grid-column: 1/3;
+      }
+  }
+  @media (max-width: $tablet) {
+    .header__menu-inner-links {
+      order: 1;
+      z-index: 1;
+      position: absolute;
+      display: flex;
+      flex-wrap: wrap;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100px;
+      background-color: blue;
+    }
+    .header__links {
+      font-size: calc(16px + (18 - 16) * ((100vw - 320px) / (767 - 320)));
+    }
+    .header__button-icon {
+      display: block;
+    }
+    .header__button-label {
+      display: none;
+      font-size: calc(16px + (18 - 16) * ((100vw - 320px) / (767 - 320)));
+    }
+    .header__menu-burger-link {
+      order: 2;
+      z-index: 2;
+      display: block;
+    }
+    .grid-carts {
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: repeat(6, 350px);
+    }
+  }
+  
+  
+  
+  
+  
+  
+  
+  @media (max-width: $mobile) {
+    .grid-carts {
+      grid-template-columns: 1fr;
+      grid-template-rows: repeat(11, 350px);
+    }
+  }
+   */
 .header {
   width: 100%;
   display: -webkit-box;
@@ -383,6 +467,11 @@ th {
   display: none;
 }
 
+.b-page {
+  background-color: #F3F3F3;
+  overflow-y: scroll;
+}
+
 .first-screen {
   width: 100%;
   display: -webkit-box;
@@ -437,12 +526,11 @@ th {
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  -o-object-position: center;
-     object-position: center;
+  -o-object-position: center center;
+     object-position: center center;
 }
 
 .grid-carts__cart1 {
-  height: auto;
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-column: 1/3;
@@ -452,18 +540,6 @@ th {
   color: #654321;
   font-size: 36px;
   margin: 10px 0 20px 0;
-}
-
-.grid-carts__cart1-inner-subtitle {
-  border: 2px solid #ffa500;
-  width: 50%;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 10px;
-}
-
-.grid-carts__cart1-subtitle {
-  margin: 0;
 }
 
 .grid-carts__cart1-desc-list {
@@ -500,7 +576,127 @@ th {
   color: white;
 }
 
-@media (max-width: 767px) {
+.advantge {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.advantge__layout-grid {
+  margin: 0 auto;
+  width: 90%;
+}
+
+.advantge__title {
+  font-family: "CenturyGothic";
+  font-size: 48px;
+  font-weight: 400;
+  text-align: center;
+}
+
+.carts-desc {
+  max-width: 600px;
+}
+
+.carts-desc__cart {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 50px;
+}
+
+.carts-desc__inner-image {
+  width: 45%;
+}
+
+.carts-desc__inner-image--modif {
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+}
+
+.carts-desc__inner-text {
+  width: 45%;
+  font-family: "CenturyGothic";
+}
+
+.text--modif {
+  text-align: right;
+}
+
+@media (max-width: 1440px) {
+  .grid-carts {
+    -ms-grid-columns: (1fr)[4];
+        grid-template-columns: repeat(4, 1fr);
+    -ms-grid-rows: (350px)[4];
+        grid-template-rows: repeat(4, 350px);
+  }
+  .grid-carts__cart1 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+    grid-column: 1/4;
+  }
+}
+
+@media (max-width: 1024px) {
+  .header__menu-inner-links {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    z-index: 1;
+    position: absolute;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100px;
+    background-color: red;
+  }
+  .header__links {
+    font-size: calc(16px + (18 - 16) * ((100vw - 320px) / (767 - 320)));
+  }
+  .header__button-icon {
+    display: block;
+  }
+  .header__button-label {
+    display: none;
+    font-size: calc(16px + (18 - 16) * ((100vw - 320px) / (767 - 320)));
+  }
+  .header__menu-burger-link {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    z-index: 2;
+    display: block;
+  }
+  .grid-carts {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -ms-grid-rows: (minmax(200px, 400px))[6];
+        grid-template-rows: repeat(6, minmax(200px, 400px));
+  }
+  .grid-carts__cart1 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1/3;
+  }
+}
+
+@media (max-width: 768px) {
   .header__menu-inner-links {
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
@@ -536,9 +732,47 @@ th {
     display: block;
   }
   .grid-carts {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: (350px)[6];
+        grid-template-rows: repeat(6, 350px);
+  }
+}
+
+@media (max-width: 480px) {
+  .grid-carts {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
-    -ms-grid-rows: (350px)[11];
-        grid-template-rows: repeat(11, 350px);
+    -ms-grid-rows: (minmax(200px, 400px))[11];
+        grid-template-rows: repeat(11, minmax(200px, 400px));
+  }
+  .grid-carts__cart1 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+  }
+  .text-align--rigth {
+    text-align: center;
+  }
+  .carts-desc__inner-image {
+    width: 100%;
+    text-align: center;
+  }
+  .carts-desc {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .carts-desc__inner-image--modif {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+  .carts-desc__inner-text {
+    width: 100%;
+    -webkit-box-ordinal-group: 14;
+        -ms-flex-order: 13;
+            order: 13;
+    text-align: center;
   }
 }
