--- a/main.scss
+++ b/main.scss
@@ -1,117 +1,15 @@
-@import "core-style/base/_output-base.scss";
-@import "core-style/objects/_output-objects.scss";
-@import "core-style/config/_output-config.scss";
+@import "core-style/_core.scss";
 .b-page {
-  @extend %reset-body;
-  background-color: $page-bg-clr;
+  background-color: $color-bg;
   overflow-y: scroll;
 }
-.header {
-  width: 100%;
-  display: flex;
-  &__layout {
-    width: 90%;
-    margin: 10px auto;
-    display: flex;
-    justify-content: space-between;
-  }
-  &__inner-logo {
-    display: block;
-  }
-  &__logo-img {
-    width: calc(120px + (180 - 120) * ((100vw - 320px) / (1600 - 320)));
-    height: 50px;
-  }
-  &__menu {
-    display: flex;
-  }
-  &__menu-inner-links {
-    display: flex;
-  }
 
-  &__links {
-    @include reset-link(black);
-    font-size: 18px;
-    font-family: $fonts-progect;
-    font-weight: regular;
-    margin: auto 15px;
-    border-bottom: 1px solid transparent;
-    transition: 0.3s;
-  }
-  &__links--hover:hover {
-    border-bottom: 1px solid $accent-shade;
-  }
-
-  &__button {
-    margin: auto 0 auto 15px;
-    text-align: center;
-    padding: 10px 10px;
-    box-sizing: border-box;
-    display: inline-block;
-    @include reset-link(black);
-    border: 1px solid $accent-shade;
-    transition: 0.3s;
-  }
-  &__menu-burger-link {
-    @include reset-link(transparent);
-    width: 50px;
-    height: 50px;
-    position: relative;
-    display: none;
-    margin-left: 20px;
-  }
-  &__menu-burger-arrow {
-    position: absolute;
-    top: calc(50% - 1px);
-    background-color: black;
-    width: 100%;
-    height: 2px;
-  }
-  &__menu-burger-link::before,
-  &__menu-burger-link::after {
-    content: "";
-    position: absolute;
-    width: 50px;
-    height: 2px;
-    background-color: black;
-    transition: transform 0.3s;
-  }
-  &__menu-burger-link::before {
-    top: 0;
-  }
-  &__menu-burger-link::after {
-    bottom: 0;
-  }
-  &__menu-burger-link:hover &__menu-burger-link::before {
-    transform: rotate(-45deg);
-  }
-  &__menu-burger-link:hover &__menu-burger-link::after {
-    transform: rotate(45deg);
-  }
-  &__menu-burger-link:hover &__menu-burger-arrow {
-    height: 0;
-  }
-
-  &__button--hover:hover {
-    background-color: $accent-shade;
-    color: white;
-  }
-  &__button-label {
-    font-family: $fonts-progect;
-    font-weight: regular;
-    font-size: 18px;
-  }
-
-  &__button-icon {
-    display: none;
-  }
-}
 .first-screen {
   width: 100%;
   display: flex;
   &__bg-smear {
     position: absolute;
-    width:50vw;
+    width: 50vw;
     left: 1%;
     top: 5vw;
     z-index: 2;
@@ -146,28 +44,16 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: center;
+    object-position: center center;
   }
   &__cart1 {
-    height: auto;
     grid-column: 1/3;
   }
 
   &__cart1-main-title {
-    color: $secondary-flow;
-    font-size: 36px;
+    color: $color-rarely;
+    font-size: $fs-title-min;
     margin: 10px 0 20px 0;
-  }
-
-  &__cart1-inner-subtitle {
-    border: 2px solid #ffa500;
-    width: 50%;
-    box-sizing: border-box;
-    padding: 10px;
-  }
-
-  &__cart1-subtitle {
-    margin: 0;
   }
 
   &__cart1-desc-missions {
@@ -198,41 +84,162 @@
       display: inline-block;
       padding: 10px 25px;
       font-family: $fonts-progect;
-      border: 1px solid $accent-shade;
+      border: 1px solid $color-primary;
       @include reset-link(white);
     }
   }
 }
-@media (max-width: 767px) {
-    .header__menu-inner-links {
-      order: 1;
-      z-index: 1;
-      position: absolute;
-      display: flex;
-      flex-wrap: wrap;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100px;
-      background-color: blue;
-    }
-    .header__links {
-      font-size: calc(16px + (18 - 16) * ((100vw - 320px) / (767 - 320)));
-    }
-    .header__button-icon {
-      display: block;
-    }
-    .header__button-label {
-      display: none;
-      font-size: calc(16px + (18 - 16) * ((100vw - 320px) / (767 - 320)));
-    }
-    .header__menu-burger-link {
-      order: 2;
-      z-index: 2;
-      display: block;
-    }
-    .grid-carts {
-      grid-template-columns: 1fr; 
-      grid-template-rows: repeat(11, 350px);
-    }
+.advantge {
+  display: flex;
+  flex-direction: column;
+  &__layout-grid {
+    margin: 0 auto;
+    width: 90%;
   }
+
+  &__title {
+    font-family: $fonts-progect;
+    font-size: 48px;
+    font-weight: 400;
+    text-align: center;
+  }
+}
+.carts-desc {
+  max-width: 600px;
+
+  &__cart {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 50px;
+  }
+
+  &__inner-image {
+    width: 45%;
+  }
+  &__inner-image--modif {
+    order: 1;
+  }
+  &__image {
+  }
+
+  &__inner-text {
+    width:45%;
+    font-family: $fonts-progect;
+  }
+  &__text-title {
+    font-size: ;
+  }
+  &__desc {
+  }
+}
+.text--modif {
+  text-align: right;
+}
+@media (max-width: $desctop) {
+  .grid-carts {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 350px);
+  }
+  .grid-carts__cart1 {
+    grid-column: 1/4;
+  }
+}
+@media (max-width: $laptop) {
+  .header__menu-inner-links {
+    order: 1;
+    z-index: 1;
+    position: absolute;
+    display: flex;
+    flex-wrap: wrap;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100px;
+    background-color: red;
+  }
+  .header__links {
+    font-size: calc(16px + (18 - 16) * ((100vw - 320px) / (767 - 320)));
+  }
+  .header__button-icon {
+    display: block;
+  }
+  .header__button-label {
+    display: none;
+    font-size: calc(16px + (18 - 16) * ((100vw - 320px) / (767 - 320)));
+  }
+  .header__menu-burger-link {
+    order: 2;
+    z-index: 2;
+    display: block;
+  }
+  .grid-carts {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(6, minmax(200px, 400px));
+  }
+  .grid-carts__cart1 {
+    grid-column: 1/3;
+  }
+}
+@media (max-width: $tablet) {
+  .header__menu-inner-links {
+    order: 1;
+    z-index: 1;
+    position: absolute;
+    display: flex;
+    flex-wrap: wrap;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100px;
+    background-color: blue;
+  }
+  .header__links {
+    font-size: calc(16px + (18 - 16) * ((100vw - 320px) / (767 - 320)));
+  }
+  .header__button-icon {
+    display: block;
+  }
+  .header__button-label {
+    display: none;
+    font-size: calc(16px + (18 - 16) * ((100vw - 320px) / (767 - 320)));
+  }
+  .header__menu-burger-link {
+    order: 2;
+    z-index: 2;
+    display: block;
+  }
+  .grid-carts {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(6, 350px);
+  }
+}
+
+@media (max-width: $mobile) {
+  .grid-carts {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(11, minmax(200px, 400px));
+  }
+  .grid-carts__cart1 {
+    grid-column: 1/2;
+  }
+  .text-align--rigth {
+    text-align: center;
+  }
+  .carts-desc__inner-image {
+    width: 100%;
+    text-align: center;
+  }
+  .carts-desc {
+    justify-content: center;
+  }
+  .carts-desc__inner-image--modif {
+    order: 2;
+  }
+  .carts-desc__inner-text {
+    width: 100%;
+    order: 13;
+    text-align: center;
+  }
+}
