--- a/css/main.css
+++ b/css/main.css
@@ -221,7 +221,7 @@ th {
 @font-face {
   font-family: "CenturyGothic";
   font-display: swap;
-  src: url("../fonts/CenturyGothic.woff") format("woff"), url("../fonts/CenturyGothic.woff2") format("woff2");
+  src: url("../fonts/CenturyGothic.woff2") format("woff2"), url("../fonts/CenturyGothic.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
@@ -229,7 +229,7 @@ th {
 @font-face {
   font-family: "CenturyGothic";
   font-display: swap;
-  src: url("../fonts/CenturyGothic-Bold.woff") format("woff"), url("../fonts/CenturyGothic-Bold.woff2") format("woff2");
+  src: url("../fonts/CenturyGothic-Bold.woff2") format("woff2"), url("../fonts/CenturyGothic-Bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
 }
@@ -615,16 +615,6 @@ th {
   margin-bottom: 50px;
 }
 
-.carts-desc__inner-image {
-  width: 45%;
-}
-
-.carts-desc__inner-image--modif {
-  -webkit-box-ordinal-group: 2;
-      -ms-flex-order: 1;
-          order: 1;
-}
-
 .carts-desc__inner-text {
   width: 45%;
   font-family: "CenturyGothic";
@@ -743,36 +733,32 @@ th {
   .grid-carts {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
-    -ms-grid-rows: (minmax(200px, 400px))[11];
-        grid-template-rows: repeat(11, minmax(200px, 400px));
+    -ms-grid-rows: (minmax(200px, 300px))[11];
+        grid-template-rows: repeat(11, minmax(200px, 300px));
   }
   .grid-carts__cart1 {
     -ms-grid-column: 1;
     -ms-grid-column-span: 1;
     grid-column: 1/2;
   }
-  .text-align--rigth {
+  .text--modif {
     text-align: center;
   }
-  .carts-desc__inner-image {
-    width: 100%;
-    text-align: center;
-  }
-  .carts-desc {
+  .carts-desc__cart {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
   }
-  .carts-desc__inner-image--modif {
+  .carts-desc____image--modif {
     -webkit-box-ordinal-group: 3;
         -ms-flex-order: 2;
             order: 2;
   }
   .carts-desc__inner-text {
     width: 100%;
-    -webkit-box-ordinal-group: 14;
-        -ms-flex-order: 13;
-            order: 13;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
     text-align: center;
   }
 }
