--- a/css/main.css
+++ b/css/main.css
@@ -580,6 +580,9 @@ th {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -592,8 +595,9 @@ th {
 }
 
 .advantge__title {
+  width: 90%;
   font-family: "CenturyGothic";
-  font-size: 48px;
+  font-size: calc(30px + 18 * ((100vw - 320px) / (1440 - 320)));
   font-weight: 400;
   text-align: center;
 }
@@ -607,17 +611,22 @@ th {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin-bottom: 50px;
 }
 
+.carts-desc__image {
+  width: 200px;
+}
+
 .carts-desc__inner-text {
-  width: 45%;
   font-family: "CenturyGothic";
+}
+
+.carts-desc__text-title {
+  margin: 0;
 }
 
 .text--modif {
@@ -748,6 +757,8 @@ th {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
   .carts-desc____image--modif {
     -webkit-box-ordinal-group: 3;
