--- a/core-style/config/_parameters.scss
+++ b/core-style/config/_parameters.scss
@@ -38,10 +38,10 @@ $s-triple: 3rem;
 $s-big: 6rem;
  
 // Media queries
-$desctop: 1440px;
-$laptop: 1024px;
-$tablet: 768px;
-$mobile: 480px;
+$desctop: 1440;
+$laptop: 1024;
+$tablet: 768;
+$mobile: 480;
  
 // Шрифты
 $font-title: "CenturyGothic";
