--- a/core-style/components/_header.scss
+++ b/core-style/components/_header.scss
@@ -1,100 +1,178 @@
 .header {
-    width: 100%;
+  width: 100%;
+  display: flex;
+  &__layout {
+    margin: 20px auto;
+    width: 90%;
     display: flex;
-    &__layout {
-      width: 90%;
-      margin: 10px auto;
-      display: flex;
-      justify-content: space-between;
-    }
-    &__inner-logo {
-      display: block;
-    }
-    &__logo-img {
-      width: calc(120px + (180 - 120) * ((100vw - 320px) / (1600 - 320)));
-      height: 50px;
-    }
-    &__menu {
-      display: flex;
-    }
-    &__menu-inner-links {
-      display: flex;
-    }
-  
-    &__links {
-      @include reset-link(black);
-      font-size: 18px;
-      font-family: $fonts-progect;
-      font-weight: regular;
-      margin: auto 15px;
-      border-bottom: 1px solid transparent;
-      transition: 0.3s;
-    }
-    &__links--hover:hover {
-      border-bottom: 1px solid $color-primary;
-    }
-  
-    &__button {
-      margin: auto 0 auto 15px;
-      text-align: center;
-      padding: 10px 10px;
-      box-sizing: border-box;
-      display: inline-block;
-      @include reset-link(black);
-      border: 1px solid $color-primary;
-      transition: 0.3s;
-    }
-    &__menu-burger-link {
-      @include reset-link(transparent);
-      width: 50px;
-      height: 50px;
-      position: relative;
-      display: none;
-      margin-left: 20px;
-    }
-    &__menu-burger-arrow {
-      position: absolute;
-      top: calc(50% - 1px);
-      background-color: black;
-      width: 100%;
-      height: 2px;
-    }
-    &__menu-burger-link::before,
-    &__menu-burger-link::after {
-      content: "";
-      position: absolute;
-      width: 50px;
-      height: 2px;
-      background-color: black;
-      transition: transform 0.3s;
-    }
-    &__menu-burger-link::before {
-      top: 0;
-    }
-    &__menu-burger-link::after {
-      bottom: 0;
-    }
-    &__menu-burger-link:hover &__menu-burger-link::before {
-      transform: rotate(-45deg);
-    }
-    &__menu-burger-link:hover &__menu-burger-link::after {
-      transform: rotate(45deg);
-    }
-    &__menu-burger-link:hover &__menu-burger-arrow {
-      height: 0;
-    }
-  
-    &__button--hover:hover {
-      background-color: $color-primary;
-      color: white;
-    }
-    &__button-label {
-      font-family: $fonts-progect;
-      font-weight: regular;
-      font-size: 18px;
-    }
-  
-    &__button-icon {
-      display: none;
-    }
+    justify-content: space-between;
   }
+
+  &__inner-link-logo {
+    display: block;
+    width: 190px;
+    @include calculate-size(width,190,151,1440);
+  }
+
+  &__logo {
+    width: 100%;
+  }
+
+  &__menu {
+    display: flex;
+  }
+
+  &__menu-list {
+    padding: 0;
+    margin-right: 30px;
+  }
+
+  &__menu-item {
+    display: inline-block;
+    margin: 0 10px;
+    list-style: none;
+  }
+
+  &__menu-item-link {
+    text-decoration: none;
+    color: black;
+    @include calculate-size(font-size,18,16,1440);
+    border-bottom: 1px solid transparent;
+    transition: border-bottom 0.2s ease;
+  }
+
+  &__menu-item-link--hover:hover {
+    border-bottom: 1px solid $color-primary;
+  }
+
+  &__burger-button {
+    display: none;
+    width: 17px;
+    height: 15px;
+    padding: 0;
+    margin: 0;
+    border: none;
+    position: relative;
+  }
+  &__burger-arrow {
+    width: 100%;
+    height: 1px;
+    position: absolute;
+    top: 49%;
+    left: 0;
+    background-color: black;
+
+  }
+  &__burger-button::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: black;
+    position: absolute;
+    top: 0; 
+  }
+  &__burger-button::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: black;
+    position: absolute;
+    bottom: 0; 
+  }
+
+  &__burger-arrow--js {
+    background-color: transparent;
+  }
+
+  &__pa-button {
+    text-decoration: none;
+    color: black;
+    border: 1px solid $color-primary;
+    display: block;
+    padding: 10px 10px;
+    margin: auto 0;
+    @include calculate-size(font-size,18,16,1440);
+    box-sizing: border-box;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    /* text-align: center; */
+  }
+
+  &__pa-button--hover:hover {
+    background-color: $color-primary;
+    color: white;
+  }
+
+  &__pa-button-icon {
+    display: none;
+  }
+}
+.header__burger-button::before,
+.header__burger-button::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: black;
+  position: absolute;
+}
+.header__burger-button::before {
+  top: 0; 
+}
+.header__burger-button::after {
+  bottom: 0; 
+}
+.header__burger-button--js::before {
+  top:50%;
+  transform: rotate(-45deg);
+}
+.header__burger-button--js::after {
+  bottom: 45%;
+  transform: rotate(45deg);
+}
+@media screen and (max-width: $mobile) {
+  .header {
+
+		&__layout {
+		}
+
+		&__inner-link-logo {
+		}
+
+		&__logo {
+		}
+
+		&__menu {
+		}
+
+		&__menu-list {
+		}
+
+		&__menu-item {
+		}
+
+		&__menu-item-link {
+		}
+
+		&__menu-item-link--hover {
+		}
+
+		&__pa-button {
+		}
+
+		&__pa-button--hover {
+		}
+
+		&__pa-button-icon {
+      display: inline-block;
+		}
+
+		&__burger-button {
+		}
+
+		&__burger-arrow {
+		}
+}
+
+}
